# task-manager-backend

./: .dockerignore  .env.template  .gitignore  LICENSE  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_timestamps.py
docker/: Dockerfile  docker-compose.yml
src/app/: auth.py  config.py  crud.py  db.py  main.py  models.py  schemas.py
src/app/routers/: auth.py  tasks.py
