[tool.poetry]
name = "task-manager-backend"
version = "0.1.0"
description = "Task Manager API (FastAPI + SQLAlchemy async + PostgreSQL)"
authors = ["Javier Gómez Moraleda <gomezmoraledajavier@gmail.com>"]
readme = "README.md"
packages = [ { include = "app", from = "src" } ]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
SQLAlchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.29.0"
alembic = "^1.11.0"
python-jose = "^3.3.0"
bcrypt = "^4.0.0"
pydantic = "^2.0"
pydantic-settings = "^2.0"
httpx = "^0.24.0"
email-validator = "^2.3.0"
python-multipart = "^0.0.22"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.21.0"
testcontainers = "^3.0.0"
pre-commit = "^3.0.0"
ruff = "^0.12.0"
black = "^24.0"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
